@@ -5,17 +5,8 @@
 # Author: Karl Trygve Kalleberg <karltk@gentoo.org>
 # Rewritten from the old, Perl-based emerge-webrsync script
 
-if [ -e /usr/bin/spython ]
-then
-	#1.0_rc6 and earlier
-	PYTHON=/usr/bin/spython
-else
-	#1.0 and later
-	PYTHON=/usr/bin/python
-fi
-
-GENTOO_MIRRORS="`${PYTHON} -c 'import portage; print portage.settings["GENTOO_MIRRORS"];'`"
-PORTDIR="`${PYTHON} -c 'import portage; print portage.settings["PORTDIR"];'`"
+GENTOO_MIRRORS="$(/usr/lib/portage/bin/portageq gentoo_mirrors)"
+PORTDIR="$(/usr/lib/portage/bin/portageq portdir)"
 syncpath="/var/tmp/emerge-webrsync"
 
 if [ ! -d $syncpath ] ; then
